--- a/src/main/resources/templates/table-add.html
+++ b/src/main/resources/templates/table-add.html
@@ -18,7 +18,7 @@
 <div class="container lg-5 mb-5">
     <h1>Добавление данных пользователя</h1>
     <form action="/table/add" method="post">
-        <div>
+        <div class="form-group">
             <input type="text" name="name1" placeholder="Введите Имя" class="form-control"> <br>
             <input type="text" name="surname" placeholder="Введите Фамилию" class="form-control"> <br>
             <input type="text" name="secname" placeholder="Введите Отчество" class="form-control"> <br>
@@ -27,32 +27,32 @@
         <br>
         <hr>
         <h3>Добавьте данные о работе</h3>
-        <div>
+        <div class="form-group">
             <input type="text" name="name2" placeholder="Введите название работы" class="form-control"> <br>
             <input type="text" name="place" placeholder="Введите место работы" class="form-control"> <br>
         </div>
         <br>
         <hr>
         <h3>Добавьте данные о доходах</h3>
-        <div>
-            <input type="text" name="amount" placeholder="Введите доход" class="form-control"> <br>
+        <div class="form-group">
+            <input type="number" step=0.01 name="amount" placeholder="Введите доход" class="form-control"> <br>
         </div>
         <br>
         <hr>
         <h3>Добавьте данные о налогах</h3>
-        <div>
-            <input type="text" name="income_taxes" placeholder="Введите налог" class="form-control"> <br>
+        <div class="form-group">
+            <input type="number" step=0.01 name="income_taxes" placeholder="Введите налог" class="form-control"> <br>
         </div>
         <br>
         <hr>
         <h3>Добавьте данные о сумме в банке</h3>
-        <div>
-            <input type="text" name="cash" placeholder="Введите сумму банка" class="form-control"> <br>
+        <div class="form-group">
+            <input type="number" name="cash" placeholder="Введите сумму банка" class="form-control"> <br>
         </div>
         <br>
         <hr>
         <h3>Добавьте данные об учреждении, принимающего налог</h3>
-        <div>
+        <div class="form-group">
             <input type="text" name="name3" placeholder="Введите название учреждения" class="form-control"> <br>
         </div>
 
