--- a/src/main/resources/templates/table-info.html
+++ b/src/main/resources/templates/table-info.html
@@ -17,9 +17,9 @@
 
 <div class="container-fluid">
     <div th:each="element_tax : ${taxpayer}">
-        <table class="table table-hover">
+        <table class="table table-hover table-bordered">
             <caption> из таблицы Taxpayer
-                <form th:action="'/table/' + ${element_tax.id} + '/remove'" method="post">
+                <form th:action="'/table/' + ${element_tax.id} + '/remove'" method="post" style="margin: 15px 0;">
                     <button class="btn btn-danger" type="submit">Удалить</button>
                 </form>
             </caption>
@@ -33,40 +33,35 @@
             </thead>
             <tbody>
             <tr>
-                <th scope="row" th:text="${element_tax.name}"></th>
-                <td th:text="${element_tax.surname}"></td>
-                <td th:text="${element_tax.secname}"></td>
-                <td th:text="${element_tax.date}"></td>
+                    <th scope="row" th:text="${element_tax.name}"></th>
+                    <td th:text="${element_tax.surname}"></td>
+                    <td th:text="${element_tax.secname}"></td>
+                    <td th:text="${element_tax.date}"></td>
             </tr>
             </tbody>
         </table>
 
-
         <div class="row">
             <div class="col-6">
-                <table class="table table-hover">
+                <table class="table table-hover table-bordered">
                     <caption> из таблицы Job</caption>
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Name</th>
                         <th scope="col">Place</th>
-                        <th scope="col"></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="element : ${job}">
                         <th scope="row" th:text="${element.name}"></th>
                         <td th:text="${element.place}"></td>
-                        <td>
-
-                        </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
 
             <div th:each="element : ${income}" class="col-3">
-                <table class="table table-hover">
+                <table class="table table-hover table-bordered">
                     <caption> из таблицы Income</caption>
                     <thead class="thead-dark">
                     <tr>
@@ -86,7 +81,7 @@
             </div>
 
             <div th:each="element : ${dues}" class="col-3">
-                <table class="table table-hover">
+                <table class="table table-hover table-bordered">
                     <caption> из таблицы Dues</caption>
                     <thead class="thead-dark">
                     <tr>
@@ -108,7 +103,7 @@
 
         <div class="row">
             <div th:each="element : ${institusion}" class="col-6">
-                <table class="table table-hover">
+                <table class="table table-hover table-bordered">
                     <caption> из таблицы Institusion</caption>
                     <thead class="thead-dark">
                     <tr>
@@ -128,7 +123,7 @@
             </div>
 
             <div class="col-6">
-                <table class="table table-hover">
+                <table class="table table-hover table-bordered">
                     <caption> из таблицы Bank</caption>
                     <thead class="thead-dark">
                     <tr>
