--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Database</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Optional JavaScript -->
@@ -18,6 +19,9 @@
 
     <link rel="stylesheet" th:href="@{/static/CSS/style.css}">
     <link rel="stylesheet" th:href="@{/static/CSS/font-awesome.min.css}">
+
+    <script src="../static/js/table.js"></script>
+    <script src="../static/js/modal-window.js"></script>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -27,30 +31,39 @@
     <a href="/table/add" type="button" class="btn btn-success btn-lg btn-block">Добавить данные пользователя</a>
 </div>
 
-<div class="album py-5 bg-light">
-    <div class="container-fluid">
-
-        <div class="row">
-            <div th:each="element : ${taxplayers}" class="col-md-4">
-                <div class="card mb-4 shadow-lg">
-                    <div class="card-body">
-                        <h2 th:text="${element.name}"></h2>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item"> <h4 th:text="${element.surname}"/></li>
-                            <li class="list-group-item"> <h4 th:text="${element.secname}"/></li>
-                        </ul>
-                        <p class="card-text">
-                            <h3>Date:</h3> <h4 th:text="${element.date}"/>
-                        </p>
-                        <a th:href="'/table/' + ${element.id}" class="btn btn-info" role="button">Подробнее »</a>
-<!--                        <a class="btn btn-info show-add" role="button">Подробнее »</a>-->
-                        <a th:href="'/table/' + ${element.id} + '/edit'" class="btn btn-info" role="button">Изменить »</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+<br>
+<div class="input-group">
+    <div class="input-group-prepend">
+        <span class="input-group-text"><i class="fa fa-search"></i></span>
     </div>
+    <input class="form-control" type="text" placeholder="Search..." id="search" onkeyup='tableSearch("search", "table")'>
+
 </div>
+
+<table id="table" class="table table-hover table-bordered">
+    <thead class="thead-dark">
+    <tr>
+        <th>Name <i class="fa fa-sort" onclick="sortTable('table', 0)"></i> </th>
+        <th>Surname <i class="fa fa-sort" onclick="sortTable('table', 1)"></i> </th>
+        <th>Secname <i class="fa fa-sort" onclick="sortTable('table', 2)"></i> </th>
+        <th>Date <i class="fa fa-sort" onclick="sortTable('table', 3)"></i> </th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody th:each="element : ${taxplayers}">
+    <tr>
+        <th scope="row" th:text="${element.name}"></th>
+        <td th:text="${element.surname}"></td>
+        <td th:text="${element.secname}"></td>
+        <td th:text="${element.date}"></td>
+        <td>
+            <a th:href="'/table/' + ${element.id}" class="btn btn-info" role="button">Подробнее »</a>
+            <!--                        <a class="btn btn-info show-add" role="button">Подробнее »</a>-->
+            <a th:href="'/table/' + ${element.id} + '/edit'" class="btn btn-info" role="button">Изменить »</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
 
 <!-- Modal -->
 <!--<div class="modal fade news-add" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
@@ -64,7 +77,7 @@
 <!--                    </button>-->
 <!--                </div>-->
 <!--                <div class="modal-body">-->
-<!--                    <p>//TODO: 4 таблицы с выводом из бд</p>-->
+<!--                    <p>//TODO: Редактирование</p>-->
 <!--                </div>-->
 <!--                <div class="modal-footer">-->
 <!--                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>-->
@@ -75,8 +88,6 @@
 <!--</div>-->
 
 <div th:insert="blocks/fronts :: fronts"></div>
-
-<script src="../static/js/table-modal.js"></script>
 
 </body>
 </html>
