--- a/src/main/resources/templates/table-edit-dues.html
+++ b/src/main/resources/templates/table-edit-dues.html
@@ -19,7 +19,7 @@
     <h1>Редактирование Налогов</h1>
     <div th:each="element : ${dues}">
         <form method="post">
-            <input type="text" th:value="${element.incomeTaxes}" name="income_taxes" placeholder="Введите нужные налоги" class="form-control"> <br>
+            <input type="number" step=0.01 th:value="${element.incomeTaxes}" name="income_taxes" placeholder="Введите нужные налоги" class="form-control"> <br>
             <button type="submit" class="btn btn-success">Обновить</button>
         </form>
     </div>
