--- a/src/main/resources/templates/table-info.html
+++ b/src/main/resources/templates/table-info.html
@@ -8,9 +8,21 @@
     <title>Item information</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=
+            "sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity=
+            "sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 
     <link rel="stylesheet" th:href="@{/static/CSS/style.css}">
     <link rel="stylesheet" th:href="@{/static/CSS/font-awesome.min.css}">
+
+    <script src="../static/js/modal-window.js"></script>
+
+
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -73,7 +85,7 @@
                     <tr>
                         <th scope="row" th:text="${element.amount}"></th>
                         <td>
-                            <a th:href="'/table/' + ${element_tax.id} + '/edit/income'" class="btn btn-info" role="button">Изменить »</a>
+                            <a class="btn btn-info show-edit-income" role="button">Изменить »</a>
                         </td>
                     </tr>
                     </tbody>
@@ -93,7 +105,7 @@
                     <tr>
                         <th scope="row" th:text="${element.incomeTaxes}"></th>
                         <td>
-                            <a th:href="'/table/' + ${element_tax.id} + '/edit/dues'" class="btn btn-info" role="button">Изменить »</a>
+                            <a class="btn btn-info show-edit-dues" role="button">Изменить »</a>
                         </td>
                     </tr>
                     </tbody>
@@ -115,7 +127,7 @@
                     <tr>
                         <th scope="row" th:text="${element.name}"></th>
                         <td>
-                            <a th:href="'/table/' + ${element_tax.id} + '/edit/institusion'" class="btn btn-info" role="button">Изменить »</a>
+                            <a class="btn btn-info show-edit-institusion" role="button">Изменить »</a>
                         </td>
                     </tr>
                     </tbody>
@@ -144,15 +156,80 @@
 
 </div>
 
-<div th:insert="blocks/fronts :: fronts"></div>
+<!-- Modals -->
+<div class="modal fade edit-income" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Редактирование доходов</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" th:each="element_tax : ${taxpayer}">
+                <div th:each="element : ${income}">
+                    <form th:action="'/table/' + ${element_tax.id} + '/edit/income'" method="post" class="form-group">
+                        <input type="number" step=0.01 th:value="${element.amount}" name="amount" placeholder="Введите нужные доходы" class="form-control"> <br>
+                        <button type="submit" class="btn btn-success">Обновить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=
-        "sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity=
-        "sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<div class="modal fade edit-dues" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Редактирование доходов</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" th:each="element_tax : ${taxpayer}" >
+                <div th:each="element : ${dues}">
+                    <form th:action="'/table/' + ${element_tax.id} + '/edit/dues'" method="post" class="form-group">
+                        <input type="number" step=0.01 th:value="${element.incomeTaxes}" name="income_taxes" placeholder="Введите нужные налоги" class="form-control"> <br>
+                        <button type="submit" class="btn btn-success">Обновить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade edit-institusion" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Редактирование доходов</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" th:each="element_tax : ${taxpayer}">
+                <div th:each="element : ${institusion}">
+                    <form th:action="'/table/' + ${element_tax.id} + '/edit/institusion'" method="post" class="form-group">
+                        <input type="text" th:value="${element.name}" name="name" placeholder="Введите нужное название учреждения" class="form-control"> <br>
+                        <button type="submit" class="btn btn-success">Обновить</button>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:insert="blocks/fronts :: fronts"></div>
 
 </body>
 </html>
