--- a/src/main/resources/templates/table-info.html
+++ b/src/main/resources/templates/table-info.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org"
+       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
        lang="en">
 <head>
     <!-- Required meta tags -->
@@ -31,7 +32,7 @@
     <div th:each="element_tax : ${taxpayer}">
         <table class="table table-hover table-bordered">
             <caption> из таблицы Taxpayer
-                <form th:action="'/table/' + ${element_tax.id} + '/remove'" method="post" style="margin: 15px 0;">
+                <form sec:authorize="hasRole('ADMIN')" th:action="'/table/' + ${element_tax.id} + '/remove'" method="post" style="margin: 15px 0;">
                     <button class="btn btn-danger" type="submit">Удалить</button>
                 </form>
             </caption>
@@ -78,13 +79,13 @@
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Amount</th>
-                        <th scope="col"></th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <th scope="row" th:text="${element.amount}"></th>
-                        <td>
+                        <td sec:authorize="hasRole('ADMIN')">
                             <a class="btn btn-info show-edit-income" role="button">Изменить »</a>
                         </td>
                     </tr>
@@ -98,13 +99,13 @@
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Income taxes</th>
-                        <th scope="col"></th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <th scope="row" th:text="${element.incomeTaxes}"></th>
-                        <td>
+                        <td sec:authorize="hasRole('ADMIN')">
                             <a class="btn btn-info show-edit-dues" role="button">Изменить »</a>
                         </td>
                     </tr>
@@ -120,13 +121,13 @@
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">Institusion</th>
-                        <th scope="col"></th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <th scope="row" th:text="${element.name}"></th>
-                        <td>
+                        <td sec:authorize="hasRole('ADMIN')">
                             <a class="btn btn-info show-edit-institusion" role="button">Изменить »</a>
                         </td>
                     </tr>
@@ -151,7 +152,7 @@
             </div>
         </div>
 
-        <a th:href="'/table/' + ${element_tax.id} + '/add/jobAndBank'" class="btn btn-success" role="button">Добавить Job и Bank »</a>
+        <a sec:authorize="hasRole('ADMIN')" th:href="'/table/' + ${element_tax.id} + '/add/jobAndBank'" class="btn btn-success" role="button">Добавить Job и Bank »</a>
     </div>
 
 </div>
